--- a/src/main/resources/com/example/hellyeah/hello-view.fxml
+++ b/src/main/resources/com/example/hellyeah/hello-view.fxml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="LoginPage" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellyeah.HelloController">
+<AnchorPane fx:id="LoginPage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellyeah.HelloController">
    <children>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D78974;">
          <left>
             <AnchorPane prefHeight="590.0" prefWidth="428" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="152.0" layoutY="36.0" prefHeight="219.0" prefWidth="110.0" text="~" textFill="#fffefe">
+                  <Label layoutX="159.0" layoutY="7.0" prefHeight="219.0" prefWidth="110.0" text="~" textFill="#fffefe">
                      <font>
                         <Font size="150.0" />
                      </font>
                   </Label>
-                  <Label layoutX="21.0" layoutY="110.0" prefHeight="201.0" prefWidth="121.0" text="~" textFill="#fffefe">
+                  <Label layoutX="21.0" layoutY="77.0" prefHeight="201.0" prefWidth="121.0" text="~" textFill="#fffefe">
                      <font>
                         <Font size="150.0" />
                      </font>
@@ -29,35 +32,35 @@
             </AnchorPane>
          </left>
          <right>
-            <AnchorPane prefHeight="400.0" prefWidth="283.0" style="-fx-background-color: #E0D7C6;" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="400.0" prefWidth="260.0" style="-fx-background-color: #E0D7C6;" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="15.0" layoutY="91.0" prefHeight="55.0" prefWidth="143.0" text="Welcome">
                      <font>
                         <Font name="Century Gothic" size="27.0" />
                      </font>
                   </Label>
-                  <Label layoutX="28.0" layoutY="151.0" text="Username:">
+                  <Label layoutX="15.0" layoutY="151.0" text="Username:">
                      <font>
                         <Font name="Arial" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtfieldUsername" layoutX="105.0" layoutY="146.0" />
-                  <Label layoutX="29.0" layoutY="183.0" text="Password:">
+                  <TextField fx:id="txtfieldUsername" layoutX="84.0" layoutY="146.0" />
+                  <Label layoutX="14.0" layoutY="183.0" text="Password:">
                      <font>
                         <Font name="Arial" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtfieldPassword" layoutX="105.0" layoutY="178.0" />
-                  <Button fx:id="btnSignIn" layoutX="200.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#onHelloButtonClick" style="-fx-background-color: #1F4C83;" text="Sign In" textFill="#f8f6f6">
-                     <font>
-                        <Font name="Arial" size="12.0" />
-                     </font>
-                  </Button>
+                  <TextField fx:id="txtfieldPassword" layoutX="84.0" layoutY="178.0" />
                   <Label fx:id="stats" layoutX="28.0" layoutY="237.0" prefHeight="20.0" prefWidth="104.0">
                      <font>
                         <Font name="Arial" size="12.0" />
                      </font>
                   </Label>
+                  <Button fx:id="btnSignIn" layoutX="171.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#onHelloButtonClick" style="-fx-background-color: #1F4C83;" text="Sign In" textFill="#f8f6f6">
+                     <font>
+                        <Font name="Arial" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
          </right>
